# IoT-API-challenge

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_aggregation_index.py
src/: main.py
src/api/routes/: aggregate.py  devices.py  events.py  health.py
src/api/schemas/: aggregate.py  common.py  devices.py  events.py
src/models/: base.py  database.py  event.py
src/services/: aggregation_service.py  device_service.py  event_service.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_aggregate.py  test_devices.py  test_events.py  test_health.py
